<resources>
    <string name="app_name">TestMeli</string>
    <string name="buscar_productos">Buscar productos</string>
    <string name="Error">Error</string>
    <string name="sin_internet">Sin conexión a internet</string>
    <string name="list_is_empty">List is empty</string>
    <string name="informacion">Información</string>
    <string name="verifique_conexion">Verifique su conexión a internet</string>
    <string name="sin_información">Sin información</string>
    <string name="consultando_productos"> Consultando productos</string>
    <string name="error_servidor">Error en el servidor</string>
    <string name="Nombre">Nombre</string>
    <string name="precio">Precio</string>
    <string name="vacio" />
    <string name="ver_mas">Ver mas</string>
    <string name="ver_menos">Ver menos</string>
    <string name="sin_reultados">No se obtuvieron resultados</string>
    <string name="unidades_disponibles">Unidades disponibles</string>
    <string name="unidades_vendidas">Unidades Vendidas</string>
    <string name="ubicaci_n">Ubicación</string>
    <string name="caracteristicas">Caracteristicas</string>
</resources>