<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvp.vista.DetalleProducto"
    android:layout_margin="10dp"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borde_cuadrado"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/tv_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/azul_oscuro"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:text="@string/unidades_disponibles"
                    android:textColor="@color/white"
                    android:layout_marginBottom="15dp"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:background="@drawable/borde_imagen"
                    >

                    <ImageView
                        android:id="@+id/imgproducto"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:padding="3dp"
                        android:layout_gravity="center"
                        tools:ignore="ContentDescription" />


                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp"
                    android:weightSum="5">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textStyle="bold"
                        android:text="@string/precio"
                        android:textColor="@color/gris_letra"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_precio"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="right"
                        android:textSize="16sp"
                        tools:ignore="RtlHardcoded" />


                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@color/azul_oscuro"

                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:weightSum="5">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textStyle="bold"
                        android:text="@string/unidades_disponibles"
                        android:textColor="@color/gris_letra"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_unidades_disp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="right"
                        android:textSize="16sp"
                        tools:ignore="RtlHardcoded" />


                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@color/azul_oscuro"

                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp"
                    android:weightSum="5">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/unidades_vendidas"
                        android:textStyle="bold"
                        android:textColor="@color/gris_letra"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_unidades_vend"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="right"
                        android:textSize="16sp"
                        tools:ignore="RtlHardcoded" />


                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@color/azul_oscuro" />


                <LinearLayout
                    android:id="@+id/ly_detalles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp">


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp"
                    android:weightSum="5">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/ubicaci_n"
                        android:textStyle="bold"
                        android:textColor="@color/gris_letra"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_ubicacion"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="right"
                        android:textSize="16sp"
                        tools:ignore="RtlHardcoded" />


                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/azul_oscuro" />


            </LinearLayout>

        </RelativeLayout>

    </ScrollView>



</RelativeLayout>